force-app/main/default/objects/ppmail__Beacon_Job__c.object
<CustomObject>
    <fields>
        <fullName>ppmail__Allowed_Attempts__c</fullName>
        <label>Allowed Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Attempts__c</fullName>
        <label>Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Autorun__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Autorun</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ppmail__Details__c</fullName>
        <label>Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Function__c</fullName>
        <label>Function</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ppmail__Is_Queueable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Queueable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ppmail__Payload__c</fullName>
        <label>Payload</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ppmail__Priority__c</fullName>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ppmail__Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ppmail__Run_After__c</fullName>
        <label>Run After</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ppmail__Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Retrying</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Beacon Job</label>
    <listViews>
        <fullName>ppmail__All_Beacon_Jobs</fullName>
        <columns>NAME</columns>
        <columns>ppmail__Function__c</columns>
        <columns>ppmail__Status__c</columns>
        <columns>ppmail__Run_After__c</columns>
        <columns>ppmail__Payload__c</columns>
        <columns>ppmail__Details__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Beacon Jobs</label>
    </listViews>
    <nameField>
        <displayFormat>PMBJ-{000000}</displayFormat>
        <label>Beacon Job Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beacon Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>